Fix global templatecontainer margin offset that caused clipping under fixed nav on all pages

--- a/static/css/game-country.css
+++ b/static/css/game-country.css
@@ -3,7 +3,7 @@
  */
 body.game-shell-active.page-country .templatediv {
     /* Keep country tabs clear of fixed navbar + shell chrome */
-    margin-top: 190px;
+    margin-top: 100px;
 }
 
 body.page-country .menuflex2 {
@@ -170,7 +170,7 @@ body.page-country .menuflex2 a h3 {
 
 @media (max-width: 857px) {
     body.game-shell-active.page-country .templatediv {
-        margin-top: 180px;
+        margin-top: 90px;
     }
 
     body.page-country .menuflex2 {
